Fixed font sizing on mobile

--- a/src/styles/aboutUs.scss
+++ b/src/styles/aboutUs.scss
@@ -12,7 +12,7 @@
 
     p {
         white-space: pre-line;
-        font-size: $font-size-sm;
+        // font-size: $font-size-sm;
     }
 }
 
